[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
regex = "1.7"
parse-display = "0.7"
num-traits = { version = "0.2", features = ["i128"] }
num-derive = { version = "0.3", features = ["full-syntax"] }
indexmap = { version = "1.9" }
arrayvec = "0.7"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

pathfinding = "4.0.0"

serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"

benchmarking = "0.4.11"